registration and program

--- a/badges.html
+++ b/badges.html
@@ -14,103 +14,102 @@
 <![endif]-->
 </head>
 <body>
-	<div class="wrapper">
-
-		<div class="header">
-			<h1 class="logo">Ruby Conference India 2010 - Logo</h1>
-			<div class="blurb">
-				<h2>RubyConf India 2010</h2>
-				<blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
-
-				<address>Location: Bangalore</address>
-				<div>Date: 20th &amp; 21st March</div>
-			</div>
-		</div>
-		
-		<div class="nav">
-			Navigate: <a href="index.html">Home</a><a href="badges.html">Blog badges</a><!--a href="#">News</a-->
-		</div>
-		
-		<div class="content">
-	    <h2>Blog Badges for RubyConf India</h2>
-	    <div class="badges">
-        <div class="badge">
-          <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
-          <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-        </div>
+<div class="wrapper">
+  <div id="menuContainer" class="nav">
+    <ul id="menu">
+      <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
+      <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
+      <li id="program"><a href="program.html"><span>Program</span></a></li>
+      <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
+      <li id="twitter"><a href="http://twitter.com/rubyconfindia" target="_blank"><span>Twitter</span></a></li>
+      <li class="last" id="contact"><a href="contact.html"><span>Contact</span></a></li>
+    </ul>
+  </div>
+  <div class="header">
+    <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
+    <div class="blurb">
+      <h2>RubyConf India 2010</h2>
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation & Technology Trust</span>.</blockquote>
+      <address>
+      Royal Orchid Hotel, Bangalore
+      </address>
+      <div>20th &amp; 21st March</div>
+    </div>
+    <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
+  </div>
+  <div class="content">
+    <h2>Blog Badges for RubyConf India</h2>
+    <div class="badges">
+      <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
+        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
       </div>
-		</div>
-	  <div class="bg">
-	    <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+    <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
+      <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+    </div>
+  </div>
+  <div class="sidebar">
+    <div class="sb_content">
+      <h4>Main Sponsor</h4>
+      <div class="sponsor_logos">
+        <ul class="main-sponsor">
+          <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
+        </ul>
       </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
+      <h4>Co-Sponsor</h4>
+      <div class="sponsor_logos">
+        <ul class="co-sponsor">
+          <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+        </ul>
       </div>
-      
-	    <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/120X240_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>      
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/154X218_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/180X150_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_attending.jpg" alt="I'm attending RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_speaking.jpg" alt="I'm speaking at RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_speaking.jpg" alt="I'm speaking at RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-      <div class="badge">
-        <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_supporting.jpg" alt="I'm supporting RubyConf India 2010"></a>
-        <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
-      </div>
-	  </div>
-
-		<div class="content_end">&nbsp;</div>
-		
-		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
-
-		
-	</div>
-	<script type="text/javascript">
+    </div>
+  </div>
+  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
+<script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
-  <script type="text/javascript">
+<script type="text/javascript">
   try {
   var pageTracker = _gat._getTracker("UA-10855424-1");
   pageTracker._trackPageview();
