--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-<head >
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
+<head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>RubyConf India 2010: Get involved</title>
 <meta name="robots" content="index,follow" />
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-<script language="javascript" src="tweet/jquery.tweet.js" type="text/javascript"></script>
-<script type='text/javascript'>
-        $(document).ready(function(){
-            $(".tweet").tweet({
-           		//username: "rubyconfindia",
-                //join_text: "auto",
-                //avatar_size: 73,
-                count: 1,
-				 
-         	 	query: "from:rubyconfindia",
-          
-         		loading_text: "searching twitter..."
-
-            });
-        });
-		
-
-</script>
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
-<link href="tweet/jquery.tweet.css" media="all" rel="stylesheet" type="text/css"/>
 <!--[if IE 6]>
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
 <![endif]-->
@@ -57,20 +37,21 @@
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
-  <div class="main_content">
-    <div class="col">
-      <h4>Sponsorship Opportunities</h4>
-      <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
-    </div>
-    <div class="col">
-      <h4>Get Involved</h4>
-      <p>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</p>
-    </div>
-    <div class="proposals">
-      <h4>Participation Information</h4>
-      <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
-      <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
-    </div>
+  <div class="content">
+    <h2>Contact us</h2>
+    <p> For more information on RubyConf India 2010, contact:</p>
+    <br />
+    <p><strong>Event Information:</strong>- <br />
+      <br />
+      Sidu Ponnappa <br />
+      ckponnappa@gmail.com <br />
+      +91-9880609867 <br />
+      <br />
+      <strong>Ticketing Assistance:</strong>- <br />
+      <br />
+      Christabel Britto <br />
+      cbritto@thoughtworks.com <br />
+      +91-9741017180 </p>
   </div>
   <div class="sidebar">
     <div class="sb_content">
@@ -88,17 +69,8 @@
       </div>
     </div>
   </div>
-  <div class="sidebar">
-    <div class="sb_content">
-      <div class="latest_news">
-        <h4>Latest Tweets </h4>
-        <a target="_blank" title="Follow us via Twitter" class="btn_yellow" href="http://twitter.com/rubyconfindia">Follow Us</a>
-        <div class="tweet"></div>
-      </div>
-    </div>
-  </div>
+  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
-<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
