--- a/program.html
+++ b/program.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-<head >
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
+<head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>RubyConf India 2010: Get involved</title>
 <meta name="robots" content="index,follow" />
 <meta name="author" content="Rajveer Singh Rathore" />
 <meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
-<script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-<script language="javascript" src="tweet/jquery.tweet.js" type="text/javascript"></script>
-<script type='text/javascript'>
-        $(document).ready(function(){
-            $(".tweet").tweet({
-           		//username: "rubyconfindia",
-                //join_text: "auto",
-                //avatar_size: 73,
-                count: 1,
-				 
-         	 	query: "from:rubyconfindia",
-          
-         		loading_text: "searching twitter..."
-
-            });
-        });
-		
-
-</script>
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
-<link href="tweet/jquery.tweet.css" media="all" rel="stylesheet" type="text/css"/>
 <!--[if IE 6]>
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
 <![endif]-->
@@ -57,20 +37,83 @@
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
-  <div class="main_content">
-    <div class="col">
-      <h4>Sponsorship Opportunities</h4>
-      <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
-    </div>
-    <div class="col">
-      <h4>Get Involved</h4>
-      <p>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</p>
-    </div>
-    <div class="proposals">
-      <h4>Participation Information</h4>
-      <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
-      <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
-    </div>
+  <div class="content">
+    <h2>Program</h2>
+    <p>The keynote addresses   and list of proposals that have made it to this year’s RubyConf India   2010 are listed below. A detailed schedule will be put up shortly:</p>
+    <table  cellspacing="0" cellpadding="0">
+      <thead>
+        <tr >
+          <th>Proposal Title</th>
+          <th>Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="odd">
+          <td>Keynote     Address by Chad Fowler: Topic to be up shortly</td>
+          <td>Chad Fowler</td>
+        </tr>
+        <tr >
+          <td>Keynote     Address by Ola Bini: Present and Future of Programming Languages</td>
+          <td>Ola Bini</td>
+        </tr>
+        <tr  class="odd">
+          <td>IronRuby:     The Ruby &amp; .Net Love Child</td>
+          <td>Ivan Porto Carrero</td>
+        </tr>
+        <tr >
+          <td>Events,     threads and writing robust client/servers in Ruby</td>
+          <td>Hemant Kumar</td>
+        </tr>
+        <tr  class="odd">
+          <td>GlassFish supports multiple Ruby web frameworks... really?</td>
+          <td>Arun Gupta</td>
+        </tr>
+        <tr >
+          <td>The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship</td>
+          <td>Pradeep Elankumaran</td>
+        </tr>
+        <tr  class="odd">
+          <td>Ruby     OOP - Objects over Classes</td>
+          <td>Aman King</td>
+        </tr>
+        <tr >
+          <td>Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months</td>
+          <td>Sidu Ponnappa and Niranjan Paranjape</td>
+        </tr>
+        <tr  class="odd">
+          <td>Building     crossplatform Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction     to  Rhodes</td>
+          <td>Dasharatham Bitla</td>
+        </tr>
+        <tr >
+          <td>Project Fedena and Why Ruby on Rails</td>
+          <td>Arvind G S</td>
+        </tr>
+        <tr  class="odd">
+          <td>The     Taming of the View </td>
+          <td>Sarah Taraporewalla</td>
+        </tr>
+        <tr >
+          <td>Let's     build a Ruby Application Server</td>
+          <td>Vineet Tyagi</td>
+        </tr>
+        <tr  class="odd">
+          <td>The     Ruby on rails I18n core API</td>
+          <td>Neeraj Kumar</td>
+        </tr>
+        <tr >
+          <td>Mortal     Kombat: Developer vs. Designer</td>
+          <td>Kapil Mohan and Arun     J</td>
+        </tr>
+        <tr  class="odd">
+          <td>MacRuby     to The Max</td>
+          <td>Brendan G. Lim</td>
+        </tr>
+        <tr >
+          <td>Hacking     and learning from Open source Ruby (Open source Rubyisms)</td>
+          <td>Sreekanth Vadagiri</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
   <div class="sidebar">
     <div class="sb_content">
@@ -88,17 +131,8 @@
       </div>
     </div>
   </div>
-  <div class="sidebar">
-    <div class="sb_content">
-      <div class="latest_news">
-        <h4>Latest Tweets </h4>
-        <a target="_blank" title="Follow us via Twitter" class="btn_yellow" href="http://twitter.com/rubyconfindia">Follow Us</a>
-        <div class="tweet"></div>
-      </div>
-    </div>
-  </div>
+  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
-<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
