Adding Galeel's patches (fixes Twitter Username)

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <script type='text/javascript'>
         $(document).ready(function(){
             $(".tweet").tweet({
-           		//username: "rubyconfindia",
+           		username: "rubyconfindia",
                 //join_text: "auto",
                 //avatar_size: 73,
                 count: 1,
-				 
-         	 	query: "from:rubyconfindia",
-          
-         		loading_text: "searching twitter..."
+				query: "from:rubyconfindia",
+           		loading_text: "searching twitter..."
 
             });
         });
