Added Nick to program and changed sponsor names

--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,13 @@
   </div>
   <div class="sidebar">
     <div class="sb_content">
-      <h4>Main Sponsor</h4>
+      <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
         </ul>
       </div>
-      <h4>Co-Sponsor</h4>
+      <h4>Gold Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
