--- a/program.html
+++ b/program.html
@@ -49,66 +49,70 @@
       </thead>
       <tbody>
         <tr class="odd">
-          <td>Keynote     Address by Chad Fowler: Topic to be up shortly</td>
+          <td>Keynote Address by Chad Fowler: Topic to be up shortly</td>
           <td>Chad Fowler</td>
         </tr>
         <tr >
-          <td>Keynote     Address by Ola Bini: Present and Future of Programming Languages</td>
+          <td>Keynote Address by Ola Bini: Present and Future of Programming Languages</td>
           <td>Ola Bini</td>
         </tr>
-        <tr  class="odd">
-          <td>IronRuby:     The Ruby &amp; .Net Love Child</td>
-          <td>Ivan Porto Carrero</td>
+        <tr class = "odd">
+          <td>Keynote/Session by Nick Sieger: Topic to be up shortly</td>
+          <td>Nick Sieger</td>
         </tr>
         <tr >
-          <td>Events,     threads and writing robust client/servers in Ruby</td>
+          <td>IronRuby: The Ruby &amp; .Net Love Child</td>
+          <td>Ivan Porto Carrero</td>
+        </tr>
+        <tr class = "odd">
+          <td>Events, threads and writing robust client/servers in Ruby</td>
           <td>Hemant Kumar</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>GlassFish supports multiple Ruby web frameworks... really?</td>
           <td>Arun Gupta</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship</td>
           <td>Pradeep Elankumaran</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>Ruby     OOP - Objects over Classes</td>
           <td>Aman King</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months</td>
           <td>Sidu Ponnappa and Niranjan Paranjape</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>Building     crossplatform Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction     to  Rhodes</td>
           <td>Dasharatham Bitla</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>Project Fedena and Why Ruby on Rails</td>
           <td>Arvind G S</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>The     Taming of the View </td>
           <td>Sarah Taraporewalla</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>Let's     build a Ruby Application Server</td>
           <td>Vineet Tyagi</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>The     Ruby on rails I18n core API</td>
           <td>Neeraj Kumar</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>Mortal     Kombat: Developer vs. Designer</td>
           <td>Kapil Mohan and Arun     J</td>
         </tr>
-        <tr  class="odd">
+        <tr >
           <td>MacRuby     to The Max</td>
           <td>Brendan G. Lim</td>
         </tr>
-        <tr >
+        <tr class = "odd">
           <td>Hacking     and learning from Open source Ruby (Open source Rubyisms)</td>
           <td>Sreekanth Vadagiri</td>
         </tr>
@@ -117,13 +121,13 @@
   </div>
   <div class="sidebar">
     <div class="sb_content">
-      <h4>Main Sponsor</h4>
+      <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
         </ul>
       </div>
-      <h4>Co-Sponsor</h4>
+      <h4>Gold Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
