--- a/badges.html
+++ b/badges.html
@@ -37,7 +37,7 @@
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
-  <div class="content">
+  <div class="content wide_content">
     <h2>Blog Badges for RubyConf India</h2>
     <div class="badges">
       <div class="badge"> <a href="http://rubyconfindia.org" target="_blank"><img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/125X125_attending.jpg" alt="I'm attending RubyConf India 2010"></a>
@@ -87,20 +87,44 @@
       <textarea class="badge_html" target="_blank">&lt;a href="http://rubyconfindia.org"&gt;&lt;img src="http://rubyconfindia.org/stock/rubyconf-badges/RubyConf2010/270X185_supporting.jpg" alt="I'm supporting RubyConf India 2010"&gt;&lt;/a&gt;</textarea>
     </div>
   </div>
-  <div class="sidebar">
-    <div class="sb_content"><h4>Platinum & Technology Sponsor</h4>
+  
+  <div class="sidebar sidebar2">
+    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
+    <div class="sb_content">
+      <h4>Platinum & Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
         </ul>
       </div>
-      <h4>Gold Sponsor</h4>
-      <div class="sponsor_logos">
-        <ul class="co-sponsor">
-          <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-        </ul>
-      </div>
+      <ul class="sponsor_list">
+        <li>
+          <h4>Gold Sponsor</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h4>Silver Sponsor</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h4>Media Partner</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.siliconindia.com/" target="_blank"><img src="images/siliconindia_logo.png" alt="Silicon India" /></a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
     </div>
+  </div>
   </div>
   <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
