--- a/contact.html
+++ b/contact.html
@@ -53,8 +53,12 @@
       cbritto@thoughtworks.com <br />
       +91-9741017180 </p>
   </div>
+  <!-- Side bar -->
   <div class="sidebar">
-    <div class="sb_content"><h4>Platinum & Technology Sponsor</h4>
+   <div class="support">
+	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
+    <div class="sb_content">
+      <h4>Platinum & Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
@@ -66,7 +70,21 @@
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
         </ul>
       </div>
+      <h4>Silver Sponsor</h4>
+      <div class="sponsor_logos">
+        <ul class="co-sponsor">
+          <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+        </ul>
+      </div>
+      <h4>Media Partner</h4>
+      <div class="sponsor_logos">
+        <ul class="co-sponsor">
+          <li> <a href="http://www.siliconindia.com/" target="_blank"><img src="images/siliconindia_logo.png" alt="Silicon India" /></a></li>
+        </ul>
+      </div>
     </div>
+  </div>
+  <!-- /side bar -->
   </div>
   <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
