--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 <body>
 <div class="wrapper">
+ 
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
@@ -54,25 +55,41 @@
       <div>20th &amp; 21st March</div>
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
+     
   </div>
-  <div class="main_content">
-    <div class="col">
-      <h4>Sponsorship Opportunities</h4>
-      <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
+  <div class="main_wrap">
+    <div class="main_content">
+      <div class="col">
+        <h4>Sponsorship Opportunities</h4>
+        <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
+      </div>
+      <div class="col">
+        <h4>Get Involved</h4>
+        <p>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</p>
+      </div>
+      <div class="proposals">
+        <h4>Participation Information</h4>
+        <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
+        <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
+      </div>
     </div>
-    <div class="col">
-      <h4>Get Involved</h4>
-      <p>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</p>
+    <div class="content">
+      <div class="sb_content">
+        <div class="latest_news">
+          <h4>Latest Tweets </h4>
+          <a target="_blank" title="Follow us via Twitter" class="btn_yellow" href="http://twitter.com/rubyconfindia">Follow Us</a>
+          <div class="tweet"></div>
+        </div>
+      </div>
     </div>
-    <div class="proposals">
-      <h4>Participation Information</h4>
-      <p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
-      <p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
-    </div>
+    
   </div>
+  <!-- Side bar -->
   <div class="sidebar">
+   <div class="support">
+	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
     <div class="sb_content">
-      <h4>Platinum &amp; Technology Sponsor</h4>
+      <h4>Platinum & Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
@@ -84,17 +101,21 @@
           <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
         </ul>
       </div>
-    </div>
-  </div>
-  <div class="sidebar">
-    <div class="sb_content">
-      <div class="latest_news">
-        <h4>Latest Tweets </h4>
-        <a target="_blank" title="Follow us via Twitter" class="btn_yellow" href="http://twitter.com/rubyconfindia">Follow Us</a>
-        <div class="tweet"></div>
+      <h4>Silver Sponsor</h4>
+      <div class="sponsor_logos">
+        <ul class="co-sponsor">
+          <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+        </ul>
+      </div>
+      <h4>Media Partner</h4>
+      <div class="sponsor_logos">
+        <ul class="co-sponsor">
+          <li> <a href="http://www.siliconindia.com/" target="_blank"><img src="images/siliconindia_logo.png" alt="Silicon India" /></a></li>
+        </ul>
       </div>
     </div>
   </div>
+  <!-- /side bar -->
 </div>
 <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 <script type="text/javascript">
