--- a/program.html
+++ b/program.html
@@ -37,9 +37,94 @@
     </div>
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
-  <div class="content">
+  <div class="content wide_content">
     <h2>Program</h2>
     <p>The keynote addresses   and list of proposals that have made it to this year’s RubyConf India   2010 are listed below. A detailed schedule will be put up shortly:</p>
+    <p>&nbsp;</p>
+    <table >
+      <thead>
+        <tr>
+          <th colspan="4" valign="middle">Day 1 - Mar 20th - Sat</th>
+          <th colspan="4" valign="middle">Day 2 - Mar 21st - Sun</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">10:00</p></td>
+          <td valign="middle"><p align="right">10:10</p></td>
+          <td colspan="2" valign="middle"><p>Kick-off by Roy Singham</p></td>
+          <td valign="middle"><p align="right">10:00</p></td>
+          <td valign="middle"><p align="right">10:45</p></td>
+          <td colspan="2" valign="middle"><p>Keynote by Ola Bini</p></td>
+        </tr>
+        <tr >
+          <td valign="middle"><p align="right">10:15</p></td>
+          <td valign="middle"><p align="right">11:00</p></td>
+          <td colspan="2" valign="middle"><p>Keynote by Chad Fowler</p></td>
+          <td valign="middle"><p align="right">11:00</p></td>
+          <td valign="middle"><p align="right">11:45</p></td>
+          <td colspan="2" valign="middle"><p>Session by Nick Sieger</p></td>
+        </tr>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">11:15</p></td>
+          <td valign="middle"><p align="right">12:00</p></td>
+          <td valign="middle"><p>Hacking and learning from    Open source Ruby (Open source Rubyisms) - Sreekanth Vadagiri</p></td>
+          <td valign="middle"><p>GlassFish supports    multiple Ruby web frameworks ... really ? - Arun Gupta</p></td>
+          <td valign="middle"><p align="right">12:00</p></td>
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
+        </tr>
+        <tr  >
+          <td valign="middle"><p align="right">12:00</p></td>
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td valign="middle"><p align="right">1:45</p></td>
+          <td valign="middle"><p>The Big Wave of Indian    Startups - (Almost) Effortless Entrepreneurship - Pradeep Elankumaran</p></td>
+          <td valign="middle"><p>The Taming of the View -    Sarah Taraporewalla</p></td>
+        </tr>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td valign="middle"><p align="right">1:45</p></td>
+          <td valign="middle"><p>IronRuby: The Ruby &amp;    .NET Love Child&quot; - Ivan Porto Carrero</p></td>
+          <td valign="middle"><p>The Ruby on rails I18n    core API - Neeraj Kumar</p></td>
+          <td valign="middle"><p align="right">2:00</p></td>
+          <td valign="middle"><p align="right">2:45</p></td>
+          <td valign="middle"><p><br />
+              Project Fedena and Why Ruby on Rails - Arvind G S</p></td>
+          <td valign="middle"><p>Let's build a Ruby    Application Server - Vineet Tyagi</p></td>
+        </tr>
+        <tr  >
+          <td valign="middle"><p align="right">2:00</p></td>
+          <td valign="middle"><p align="right">2:45</p></td>
+          <td valign="middle"><p>Ruby on Rails versus    Django - A newbie Web Developer's Perspective - Shreyank Gupta</p></td>
+          <td valign="middle"><p>Ruby OOP - Objects over    Classes - Aman King</p></td>
+          <td valign="middle"><p align="right">3:00</p></td>
+          <td valign="middle"><p align="right">3:45</p></td>
+          <td valign="middle"><p>Managing entropy on long    term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen    months - Sidu Ponnappa &amp; Niranjan Paranjape</p></td>
+          <td valign="middle"><p>MacRuby to the Max -    Brendan G. Lim</p></td>
+        </tr>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">3:00</p></td>
+          <td valign="middle"><p align="right">3:45</p></td>
+          <td valign="middle"><p>Concurrency patterns in    Ruby - Sai Venkatakrishnan</p></td>
+          <td valign="middle"><p>Building crossplatform    Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction to  Rhodes - Dasharatham Bitla</p></td>
+          <td valign="middle"><p align="right">4:00</p></td>
+          <td valign="middle"><p align="right">4:45</p></td>
+          <td colspan="2" valign="middle"><p>Placeholder - pending    speaker confirmation</p></td>
+        </tr>
+        <tr  >
+          <td valign="middle"><p align="right">4:00</p></td>
+          <td valign="middle"><p align="right">5:00</p></td>
+          <td valign="middle"><p>Mortal Kombat: Developer    vs. Designer - Kapil Mohan &amp; Arun J</p></td>
+          <td valign="middle"><p>Events, threads and    writing robust client/servers in Ruby - Hemant Kumar</p></td>
+          <td valign="middle"><p align="right">5:00</p></td>
+          <td valign="middle"><p align="right">5:45</p></td>
+          <td colspan="2" valign="middle"><p>Closing note by Roy    Singham</p></td>
+        </tr>
+      </tbody>
+    </table>
+    <!--
     <table  cellspacing="0" cellpadding="0">
       <thead>
         <tr >
@@ -114,23 +199,47 @@
         </tr>
       </tbody>
     </table>
+    -->
   </div>
-  <div class="sidebar">
-    <div class="sb_content"><h4>Platinum & Technology Sponsor</h4>
+  <div class="sidebar sidebar2">
+    <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
+    <div class="sb_content">
+      <h4>Platinum & Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
         </ul>
       </div>
-      <h4>Gold Sponsor</h4>
-      <div class="sponsor_logos">
-        <ul class="co-sponsor">
-          <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
-        </ul>
-      </div>
+      <ul class="sponsor_list">
+        <li>
+          <h4>Gold Sponsor</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h4>Silver Sponsor</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.mahaswami.com/" target="_blank"><img src="images/mahaswami_logo.png" alt="Mahaswami Software" /></a></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h4>Media Partner</h4>
+          <div class="sponsor_logos">
+            <ul class="co-sponsor">
+              <li> <a href="http://www.siliconindia.com/" target="_blank"><img src="images/siliconindia_logo.png" alt="Silicon India" /></a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
-  <div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+</div>
+<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 </div>
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
