Applying Rajveer's patches

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
+	  <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
       <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
@@ -48,7 +49,7 @@
     <h1 class="logo">Ruby Conference India 2010 - Logo</h1>
     <div class="blurb">
       <h2>RubyConf India 2010</h2>
-      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation & Technology Trust</span>.</blockquote>
+      <blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by the <span>Ruby Community</span> in India and supported by <a href="http://www.rubycentral.org"><span>RubyCentral</span></a> and the <span>Innovation &amp; Technology Trust</span>.</blockquote>
       <address>
       Royal Orchid Hotel, Bangalore
       </address>
@@ -59,13 +60,17 @@
   </div>
   <div class="main_wrap">
     <div class="main_content">
+	  	<div class="col">
+	        <h4>Latest News</h4>
+	        <ul class="news">
+				<li>RubyConf India 2010 sold out within the first week of opening registrations!</li>
+				<li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
+				
+			</ul>
+	      </div>
       <div class="col">
         <h4>Sponsorship Opportunities</h4>
         <p>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></p>
-      </div>
-      <div class="col">
-        <h4>Get Involved</h4>
-        <p>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</p>
       </div>
       <div class="proposals">
         <h4>Participation Information</h4>
@@ -89,7 +94,7 @@
    <div class="support">
 	<a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a>	</div>
     <div class="sb_content">
-      <h4>Platinum & Technology Sponsor</h4>
+      <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
@@ -98,7 +103,8 @@
       <h4>Gold Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="co-sponsor">
-          <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+          <li><a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+		  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
         </ul>
       </div>
       <h4>Silver Sponsor</h4>
