--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
 <![endif]-->
 </head>
-<body>
+<body id="about">
 <div class="wrapper">
   <div id="menuContainer" class="nav">
     <ul id="menu">
@@ -39,20 +39,15 @@
     <div class="register"> <a href="http://rubyconfindia.doattend.com">Register Now</a> </div>
   </div>
   <div class="content">
-    <h2>Contact us</h2>
-    <p> For more information on RubyConf India 2010, contact:</p>
-    <br />
-    <p><strong>Event Information: </strong> <br />
-      <br />
-      Sidu Ponnappa <br />
-      sidu@thoughtworks.com <br />
-      +91-9880609867 <br />
-      <br />
-      <strong>Ticketing Assistance:</strong>- <br />
-      <br />
-      Christabel Britto <br />
-      cbritto@thoughtworks.com <br />
-      +91-9741017180 </p>
+    <h2>About</h2>
+    <p>The <strong>Ruby Community</strong> in India together with the <strong>Innovation &amp; Technology Trust</strong> is pleased to announce <strong>RubyConf India 2010</strong> on <strong>Mar 20<sup>th</sup></strong> and <strong>21<sup>st</sup></strong> at the Royal Orchid Hotel, Bangalore. Targeted at Ruby practitioners and anyone remotely interested or curious about Ruby, it will offer Ruby enthusiasts an opportunity brainstorm, network and learn about the latest technology changes first-hand.</p>  
+
+	<p>Being the <strong>first ever</strong> RubyConf to be hosted in India, this 2-day event will feature prominent speakers like Yukihiro “<strong>Matz</strong>” Matsumoto (the creator of Ruby himself will deliver a talk via video-conference), <strong>Chad Fowler</strong> author of “The Passionate Programmer” and “My Job went to India”, <strong>Ola Bini</strong> core-committer to JRuby since 2006, <strong>Obie Fernandez</strong> author of “The Rails Way” and <strong>Nick Sieger</strong> of Engine Yard and JRuby fame.</p>  
+
+	<p>Ruby is an OS dynamic language that offers an ideal development environment for <strong>Agile</strong> practitioners. It has one of the most active open source communities worldwide which produces and supports tools and projects like “Ruby on Rails” - a powerful web application development framework that works well on different platforms, and significantly <strong>reduces time-to-market</strong> and <strong>operating costs</strong>.</p>
+
+	<p>A strong supporter of emerging OS technologies that promise to revolutionize the IT landscape, <strong>ThoughtWorks</strong> is the Platinum and Technology Sponsor for this event and is supported by <strong>Ruby Central</strong> – an international non-profit dedicated to the advocacy of the Ruby programming language across the globe.  Ecosystem support includes Gold Sponsors Castle Rock Research <strong>Corporation &amp; Hashrocket</strong>, Silver Sponsor <strong>Mahaswami Software</strong> and Media Partner <strong>Silicon India</strong>. Register today at <a href="http://rubyconfindia.org/">www.rubyconfindia.org</a>!</p>
+	
   </div>
   <!-- Side bar -->
   <div class="sidebar">
