--- a/badges.html
+++ b/badges.html
@@ -18,6 +18,7 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
+	  <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
       <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
@@ -91,7 +92,7 @@
   <div class="sidebar sidebar2">
     <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
     <div class="sb_content">
-      <h4>Platinum & Technology Sponsor</h4>
+      <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
@@ -103,6 +104,7 @@
           <div class="sponsor_logos">
             <ul class="co-sponsor">
               <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+			<li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
             </ul>
           </div>
         </li>
