--- a/program.html
+++ b/program.html
@@ -18,6 +18,7 @@
   <div id="menuContainer" class="nav">
     <ul id="menu">
       <li class="first" id="home"><a href="index.html"><span>Home</span></a></li>
+	  <li id="about"><a href="about.html"><span>About</span></a></li>
       <li id="register"><a href="http://rubyconfindia.doattend.com"><span>Register</span></a></li>
       <li id="program"><a href="program.html"><span>Program</span></a></li>
       <li id="blog"><a href="badges.html"><span>Blog badges</span></a></li>
@@ -55,21 +56,20 @@
           <td colspan="2" valign="middle"><p>Kick-off by Roy Singham</p></td>
           <td valign="middle"><p align="right">10:00</p></td>
           <td valign="middle"><p align="right">10:45</p></td>
-          <td colspan="2" valign="middle"><p>Keynote by Ola Bini</p></td>
+          <td colspan="2" valign="middle"><p>Present and Future of Programming Languages – Keynote by Ola Bini</p></td>
         </tr>
         <tr >
           <td valign="middle"><p align="right">10:15</p></td>
           <td valign="middle"><p align="right">11:00</p></td>
-          <td colspan="2" valign="middle"><p>Keynote by Chad Fowler</p></td>
+          <td colspan="2" valign="middle"><p>“Ruby on Rails Insurgency” - Keynote by Chad Fowler</p></td>
           <td valign="middle"><p align="right">11:00</p></td>
           <td valign="middle"><p align="right">11:45</p></td>
-          <td colspan="2" valign="middle"><p>Session by Nick Sieger</p></td>
+          <td colspan="2" valign="middle"><p>Exploring Rails 3 Through Choices – Nick Sieger</p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">11:15</p></td>
           <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle"><p>Hacking and learning from    Open source Ruby (Open source Rubyisms) - Sreekanth Vadagiri</p></td>
-          <td valign="middle"><p>GlassFish supports    multiple Ruby web frameworks ... really ? - Arun Gupta</p></td>
+          <td valign="middle" colspan="2"><p>Session by Obie Fernandez – Topic to be put  up shortly</p></td>
           <td valign="middle"><p align="right">12:00</p></td>
           <td valign="middle"><p align="right">1:00</p></td>
           <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
@@ -80,131 +80,63 @@
           <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
           <td valign="middle"><p align="right">1:00</p></td>
           <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>The Big Wave of Indian    Startups - (Almost) Effortless Entrepreneurship - Pradeep Elankumaran</p></td>
-          <td valign="middle"><p>The Taming of the View -    Sarah Taraporewalla</p></td>
+          <td valign="middle"><p>TRACK 1: The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship - Pradeep Elankumaran</p></td>
+          <td valign="middle"><p>TRACK 2: The Taming of the View - Sarah Taraporewalla</p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">1:00</p></td>
           <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>IronRuby: The Ruby &amp;    .NET Love Child&quot; - Ivan Porto Carrero</p></td>
-          <td valign="middle"><p>The Ruby on rails I18n    core API - Neeraj Kumar</p></td>
+          <td valign="middle"><p>TRACK 1: IronRuby: The Ruby &amp;    .NET Love Child&quot; - Ivan Porto Carrero</p></td>
+          <td valign="middle"><p>TRACK 2: The Ruby on rails I18n    core API - Neeraj Kumar</p></td>
           <td valign="middle"><p align="right">2:00</p></td>
           <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p><br />
-              Project Fedena and Why Ruby on Rails - Arvind G S</p></td>
-          <td valign="middle"><p>Let's build a Ruby    Application Server - Vineet Tyagi</p></td>
+          <td valign="middle"><p>TRACK 1: GlassFish supports multiple Ruby web frameworks ... really ? - Arun Gupta </p></td>
+          <td valign="middle"><p>TRACK 2: Let's build a Ruby Application Server - Vineet Tyagi</p></td>
         </tr>
         <tr  >
           <td valign="middle"><p align="right">2:00</p></td>
           <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p>Ruby on Rails versus    Django - A newbie Web Developer's Perspective - Shreyank Gupta</p></td>
-          <td valign="middle"><p>Ruby OOP - Objects over    Classes - Aman King</p></td>
+          <td valign="middle"><p>TRACK 1: Ruby on Rails versus    Django - A newbie Web Developer's Perspective - Shreyank Gupta</p></td>
+          <td valign="middle"><p>TRACK 2: Ruby OOP - Objects over    Classes - Aman King</p></td>
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p>Managing entropy on long    term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen    months - Sidu Ponnappa &amp; Niranjan Paranjape</p></td>
-          <td valign="middle"><p>MacRuby to the Max -    Brendan G. Lim</p></td>
+          <td valign="middle"><p>TRACK 1: Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months - Sidu Ponnappa & Niranjan Paranjape</p></td>
+          <td valign="middle"><p>TRACK 2: MacRuby to the Max - Brendan G. Lim</p></td>
         </tr>
-        <tr  class="odd">
+        <tr class="odd">
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p>Concurrency patterns in    Ruby - Sai Venkatakrishnan</p></td>
-          <td valign="middle"><p>Building crossplatform    Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction to  Rhodes - Dasharatham Bitla</p></td>
+          <td valign="middle" colspan="2"><p>Session by Yukihiro Matsumoto "Matz"</p></td>
           <td valign="middle"><p align="right">4:00</p></td>
           <td valign="middle"><p align="right">4:45</p></td>
-          <td colspan="2" valign="middle"><p>Placeholder - pending    speaker confirmation</p></td>
+          <td valign="middle"><p>TRACK 1: Project Fedena and Why Ruby on Rails - Arvind G S</p></td>
+		  <td valign="middle"><p>TRACK 2: Hacking and learning from Open source Ruby (Open source Rubyisms) - Sreekanth Vadagiri</p></td>
         </tr>
-        <tr  >
+        <tr>
           <td valign="middle"><p align="right">4:00</p></td>
+          <td valign="middle"><p align="right">4:45</p></td>
+          <td valign="middle"><p>TRACK 1: Concurrency patterns in Ruby - Sai Venkatakrishnan</p></td>
+          <td valign="middle"><p>TRACK 2: Events, threads and writing robust client/servers in Ruby - Hemant Kumar</p></td>
           <td valign="middle"><p align="right">5:00</p></td>
-          <td valign="middle"><p>Mortal Kombat: Developer    vs. Designer - Kapil Mohan &amp; Arun J</p></td>
-          <td valign="middle"><p>Events, threads and    writing robust client/servers in Ruby - Hemant Kumar</p></td>
+          <td valign="middle"><p align="right">5:45</p></td>
+          <td colspan="2" valign="middle"><p>Closing note by Roy Singham</p></td>
+        </tr>
+		<tr class="odd">
+          <td valign="middle"><p align="right">5:00</p></td>
+          <td valign="middle"><p align="right">6:00</p></td>
+          <td valign="middle"><p>TRACK 1: Mortal Kombat: Developer vs. Designer - Kapil Mohan &amp; Arun J</p></td>
+          <td valign="middle"><p>TRACK 2: Building crossplatform Mobile (Smartphone) Apps with Ruby & HTML - An introduction to  Rhodes - Dasharatham Bitla</p></td>
           <td valign="middle"><p align="right">5:00</p></td>
           <td valign="middle"><p align="right">5:45</p></td>
           <td colspan="2" valign="middle"><p>Closing note by Roy    Singham</p></td>
         </tr>
       </tbody>
     </table>
-    <!--
-    <table  cellspacing="0" cellpadding="0">
-      <thead>
-        <tr >
-          <th>Proposal Title</th>
-          <th>Speaker</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="odd">
-          <td>Keynote     Address by Chad Fowler: Topic to be up shortly</td>
-          <td>Chad Fowler</td>
-        </tr>
-        <tr >
-          <td>Keynote     Address by Ola Bini: Present and Future of Programming Languages</td>
-          <td>Ola Bini</td>
-        </tr>
-        <tr  class="odd">
-          <td>IronRuby:     The Ruby &amp; .Net Love Child</td>
-          <td>Ivan Porto Carrero</td>
-        </tr>
-        <tr >
-          <td>Events,     threads and writing robust client/servers in Ruby</td>
-          <td>Hemant Kumar</td>
-        </tr>
-        <tr  class="odd">
-          <td>GlassFish     supports multiple Ruby web frameworks ... really ?</td>
-          <td>Arun Gupta</td>
-        </tr>
-        <tr >
-          <td>The     Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship</td>
-          <td>Pradeep Elankumaran</td>
-        </tr>
-        <tr  class="odd">
-          <td>Ruby     OOP - Objects over Classes</td>
-          <td>Aman King</td>
-        </tr>
-        <tr >
-          <td>Managing     entropy on long term Ruby and Rails codebases, or how not to kill a     Ruby</td>
-          <td>Sidu Ponnappa and     Niranjan Paranjape</td>
-        </tr>
-        <tr  class="odd">
-          <td>Building     crossplatform Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction     to  Rhodes</td>
-          <td>Dasharatham Bitla</td>
-        </tr>
-        <tr >
-          <td>Project     Fedena and Why Ruby on Rails</td>
-          <td>Arvind G S</td>
-        </tr>
-        <tr  class="odd">
-          <td>The     Taming of the View </td>
-          <td>Sarah Taraporewalla</td>
-        </tr>
-        <tr >
-          <td>Let's     build a Ruby Application Server</td>
-          <td>Vineet Tyagi</td>
-        </tr>
-        <tr  class="odd">
-          <td>The     Ruby on rails I18n core API</td>
-          <td>Neeraj Kumar</td>
-        </tr>
-        <tr >
-          <td>Mortal     Kombat: Developer vs. Designer</td>
-          <td>Kapil Mohan and Arun     J</td>
-        </tr>
-        <tr  class="odd">
-          <td>MacRuby     to The Max</td>
-          <td>Brendan G. Lim</td>
-        </tr>
-        <tr >
-          <td>Hacking     and learning from Open source Ruby (Open source Rubyisms)</td>
-          <td>Sreekanth Vadagiri</td>
-        </tr>
-      </tbody>
-    </table>
-    -->
   </div>
   <div class="sidebar sidebar2">
     <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
     <div class="sb_content">
-      <h4>Platinum & Technology Sponsor</h4>
+      <h4>Platinum &amp; Technology Sponsor</h4>
       <div class="sponsor_logos">
         <ul class="main-sponsor">
           <li> <a href="http://www.thoughtworks.com/" target="_blank"><img src="images/tw_md.png" alt="Thoughtworks" /></a></li>
@@ -216,6 +148,7 @@
           <div class="sponsor_logos">
             <ul class="co-sponsor">
               <li> <a href="http://www.castlerockresearch.com/" target="_blank"><img src="images/castle_rock_logo.png" alt="Castle Rock" /></a></li>
+			  <li><a href="http://www.hashrocket.com/" target="_blank"><img src="images/hash_rocket_logo.png" alt="Hash Rocket" /></a></li>
             </ul>
           </div>
         </li>
