Applying Patch of February 25

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 	  	<div class="col">
 	        <h4>Latest News</h4>
 	        <ul class="news">
-				<li>RubyConf India 2010 sold out within the first week of opening registrations!</li>
+				<li>RubyConf India 2010 sold out within the first week of opening registrations! Added 150 new seats in response to requests received.</li>
 				<li>Yukihiro Matsumoto “Matz” has kindly agreed to speak at RubyConf India 2010 via a video call</li>
-				
 			</ul>
 	      </div>
       <div class="col">
