--- a/program.html
+++ b/program.html
@@ -42,96 +42,126 @@
     <h2>Program</h2>
     <p>The keynote addresses   and list of proposals that have made it to this year’s RubyConf India   2010 are listed below. A detailed schedule will be put up shortly:</p>
     <p>&nbsp;</p>
-    <table >
+    <table>
       <thead>
         <tr>
           <th colspan="4" valign="middle">Day 1 - Mar 20th - Sat</th>
-          <th colspan="4" valign="middle">Day 2 - Mar 21st - Sun</th>
         </tr>
       </thead>
       <tbody>
         <tr  class="odd">
           <td valign="middle"><p align="right">10:00</p></td>
           <td valign="middle"><p align="right">10:10</p></td>
-          <td colspan="2" valign="middle"><p>Kick-off by Roy Singham</p></td>
-          <td valign="middle"><p align="right">10:00</p></td>
-          <td valign="middle"><p align="right">10:45</p></td>
-          <td colspan="2" valign="middle"><p>Present and Future of Programming Languages – Keynote by Ola Bini</p></td>
+          <td colspan="2" valign="middle"><p>Kick-off <span class="lighter">by Roy Singham<span></p></td>
         </tr>
         <tr >
           <td valign="middle"><p align="right">10:15</p></td>
           <td valign="middle"><p align="right">11:00</p></td>
-          <td colspan="2" valign="middle"><p>“Ruby on Rails Insurgency” - Keynote by Chad Fowler</p></td>
-          <td valign="middle"><p align="right">11:00</p></td>
-          <td valign="middle"><p align="right">11:45</p></td>
-          <td colspan="2" valign="middle"><p>Exploring Rails 3 Through Choices – Nick Sieger</p></td>
+          <td colspan="2" valign="middle"><p>“Ruby on Rails Insurgency” - Keynote <span class="lighter">by Chad Fowler</span></p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">11:15</p></td>
           <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle" colspan="2"><p>Session by Obie Fernandez – Topic to be put  up shortly</p></td>
-          <td valign="middle"><p align="right">12:00</p></td>
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
+          <td valign="middle" colspan="2"><p>Session <span class="lighter">by Obie Fernandez – Topic to be put  up shortly</span></p></td>
         </tr>
         <tr  >
           <td valign="middle"><p align="right">12:00</p></td>
           <td valign="middle"><p align="right">1:00</p></td>
           <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
-          <td valign="middle"><p align="right">1:00</p></td>
-          <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>TRACK 1: The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship - Pradeep Elankumaran</p></td>
-          <td valign="middle"><p>TRACK 2: The Taming of the View - Sarah Taraporewalla</p></td>
         </tr>
         <tr  class="odd">
           <td valign="middle"><p align="right">1:00</p></td>
           <td valign="middle"><p align="right">1:45</p></td>
-          <td valign="middle"><p>TRACK 1: IronRuby: The Ruby &amp;    .NET Love Child&quot; - Ivan Porto Carrero</p></td>
-          <td valign="middle"><p>TRACK 2: The Ruby on rails I18n    core API - Neeraj Kumar</p></td>
-          <td valign="middle"><p align="right">2:00</p></td>
-          <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p>TRACK 1: GlassFish supports multiple Ruby web frameworks ... really ? - Arun Gupta </p></td>
-          <td valign="middle"><p>TRACK 2: Let's build a Ruby Application Server - Vineet Tyagi</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> IronRuby: The Ruby &amp;.NET Love Child - <span class="lighter">Ivan Porto Carrero</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> The Ruby on rails I18n core API - <span class="lighter">Neeraj Kumar</span></p></td>
         </tr>
         <tr  >
           <td valign="middle"><p align="right">2:00</p></td>
           <td valign="middle"><p align="right">2:45</p></td>
-          <td valign="middle"><p>TRACK 1: Ruby on Rails versus    Django - A newbie Web Developer's Perspective - Shreyank Gupta</p></td>
-          <td valign="middle"><p>TRACK 2: Ruby OOP - Objects over    Classes - Aman King</p></td>
-          <td valign="middle"><p align="right">3:00</p></td>
-          <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle"><p>TRACK 1: Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months - Sidu Ponnappa & Niranjan Paranjape</p></td>
-          <td valign="middle"><p>TRACK 2: MacRuby to the Max - Brendan G. Lim</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Ruby on Rails versus    Django - A newbie Web Developer's Perspective - <span class="lighter">Shreyank Gupta</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> Ruby OOP - Objects over    Classes - <span class="lighter">Aman King</span></p></td>
         </tr>
         <tr class="odd">
           <td valign="middle"><p align="right">3:00</p></td>
           <td valign="middle"><p align="right">3:45</p></td>
-          <td valign="middle" colspan="2"><p>Session by Yukihiro Matsumoto "Matz"</p></td>
-          <td valign="middle"><p align="right">4:00</p></td>
-          <td valign="middle"><p align="right">4:45</p></td>
-          <td valign="middle"><p>TRACK 1: Project Fedena and Why Ruby on Rails - Arvind G S</p></td>
-		  <td valign="middle"><p>TRACK 2: Hacking and learning from Open source Ruby (Open source Rubyisms) - Sreekanth Vadagiri</p></td>
+          <td valign="middle" colspan="2"><p>Session <span class="lighter">by Yukihiro Matsumoto "Matz"</span></p></td>
         </tr>
         <tr>
           <td valign="middle"><p align="right">4:00</p></td>
           <td valign="middle"><p align="right">4:45</p></td>
-          <td valign="middle"><p>TRACK 1: Concurrency patterns in Ruby - Sai Venkatakrishnan</p></td>
-          <td valign="middle"><p>TRACK 2: Events, threads and writing robust client/servers in Ruby - Hemant Kumar</p></td>
-          <td valign="middle"><p align="right">5:00</p></td>
-          <td valign="middle"><p align="right">5:45</p></td>
-          <td colspan="2" valign="middle"><p>Closing note by Roy Singham</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Concurrency patterns in Ruby - <span class="lighter">Sai Venkatakrishnan &amp; Hari Krishnan</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> Events, threads and writing robust client/servers in Ruby - <span class="lighter">Hemant Kumar</span></p></td>
         </tr>
 		<tr class="odd">
           <td valign="middle"><p align="right">5:00</p></td>
           <td valign="middle"><p align="right">6:00</p></td>
-          <td valign="middle"><p>TRACK 1: Mortal Kombat: Developer vs. Designer - Kapil Mohan &amp; Arun J</p></td>
-          <td valign="middle"><p>TRACK 2: Building crossplatform Mobile (Smartphone) Apps with Ruby & HTML - An introduction to  Rhodes - Dasharatham Bitla</p></td>
-          <td valign="middle"><p align="right">5:00</p></td>
-          <td valign="middle"><p align="right">5:45</p></td>
-          <td colspan="2" valign="middle"><p>Closing note by Roy    Singham</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Mortal Kombat: Developer vs. Designer - <span class="lighter">Kapil Mohan &amp; Arun J</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> Building crossplatform Mobile (Smartphone) Apps with Ruby &amp; HTML - An introduction to  Rhodes - <span class="lighter">Dasharatham Bitla</span></span></p></td>
         </tr>
       </tbody>
     </table>
+
+
+	<table>
+      <thead>
+        <tr>
+          <th colspan="4" valign="middle">Day 2 - Mar 21st - Sun</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">10:00</p></td>
+          <td valign="middle"><p align="right">10:45</p></td>
+          <td colspan="2" valign="middle"><p>Present and Future of Programming Languages – <span class="lighter">Keynote by Ola Bini</span></p></td>
+        </tr>
+        <tr >
+          <td valign="middle"><p align="right">11:00</p></td>
+          <td valign="middle"><p align="right">11:45</p></td>
+          <td colspan="2" valign="middle"><p>Exploring Rails 3 Through Choices – <span class="lighter">Nick Sieger</span></p></td>
+        </tr>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">12:00</p></td>
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td colspan="2" valign="middle"><p align="center">Lunch</p></td>
+        </tr>
+        <tr  >
+          <td valign="middle"><p align="right">1:00</p></td>
+          <td valign="middle"><p align="right">1:45</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> The Big Wave of Indian Startups - (Almost) Effortless Entrepreneurship - <span class="lighter">Pradeep Elankumaran</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> The Taming of the View - <span class="lighter">Sarah Taraporewalla</span></p></td>
+        </tr>
+        <tr  class="odd">
+          <td valign="middle"><p align="right">2:00</p></td>
+          <td valign="middle"><p align="right">2:45</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> GlassFish supports multiple Ruby web frameworks ... really ? - <span class="lighter">Arun Gupta</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> Let's build a Ruby Application Server - <span class="lighter">Vineet Tyagi</span></p></td>
+        </tr>
+        <tr  >
+          <td valign="middle"><p align="right">3:00</p></td>
+          <td valign="middle"><p align="right">3:45</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Managing entropy on long term Ruby and Rails codebases, or how not to kill a Ruby project in eighteen months - <span class="lighter">Sidu Ponnappa &amp; Niranjan Paranjape</span></p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 2:</span> MacRuby to the Max - <span class="lighter">Brendan G. Lim</span></p></td>
+        </tr>
+        <tr class="odd">
+          <td valign="middle"><p align="right">4:00</p></td>
+          <td valign="middle"><p align="right">4:45</p></td>
+          <td valign="middle"><p><span class="lighter">TRACK 1:</span> Project Fedena and Why Ruby on Rails - <span class="lighter">Arvind G S</p></td>
+		  <td valign="middle"><p><span class="lighter">TRACK 2:</span> Hacking and learning from Open source Ruby (Open source Rubyisms) - <span class="lighter">Sreekanth Vadagiri</span></p></td>
+        </tr>
+        <tr>
+          <td valign="middle"><p align="right">5:00</p></td>
+          <td valign="middle"><p align="right">5:45</p></td>
+          <td colspan="2" valign="middle"><p>Closing note by <span class="lighter">Roy Singham</span></p></td>
+        </tr>
+      </tbody>
+    </table>
+
+
+
+
+
+
+
   </div>
   <div class="sidebar sidebar2">
     <div class="support"> <a href="http://www.rubycentral.org/" target="_blank"><img src="images/ruby_central_logo_small.png" alt="Ruby Central" title="Supoorted by - Ruby Central" /></a> </div>
